--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
         body {
             margin: 0;
             padding: 0;
+            overflow: hidden;
         }
     </style>
 </head>
 
 <body>
-
     <div id="content"></div>
     <!-- uncomment the line bellow for cordova feature -->
     <!-- <script type="text/javascript" src="cordova.js"></script> -->
