--- a/assets/html/leaderboard.html
+++ b/assets/html/leaderboard.html
@@ -1,32 +1,30 @@
 
+<style>
+    #leaderboard{
+        color: white;
+        display: flex;
+        flex-direction: column;
+        width: 250px;
+    }
+    .title{
+        font-size: 24px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 700;
+        text-align: center;
+        margin: 10px 0;
+    }
+    td{
+        color: #c080ff;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    tr td:last-child{
+        text-align: right;
+    }
+</style>
 
-    <style>
-        #leaderboard{
-            color: white;
-            display: flex;
-            flex-direction: column;
-        }
-        .title{
-            font-size: 26px;
-            font-family: Arial, Helvetica, sans-serif;
-            font-weight: 700;
-            text-align: center;
-        }
-        td{
-            color: #c080ff;
-            font-family: Arial, Helvetica, sans-serif;
-
-        }
-        .right{
-            text-align: right;
-        }
-    </style>
-<body>
-    <div id="leaderboard">
-        <p class="title">Leaderboard</p>
-        <table class="topTable" id="myTable">
-            
-        </table>
-    </div>
-</body>
-</html>
+<div id="leaderboard">
+    <p class="title">Leaderboard</p>
+    <table class="topTable" id="myTable">
+        
+    </table>
+</div>
