--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             overflow: hidden;
         }
     </style>
-<script defer="defer" src="./dev/vendor.js"></script><script defer="defer" src="./dev/app.js"></script></head>
+</head>
 
 <body>
     <div id="content"></div>
     <!-- uncomment the line bellow for cordova feature -->
     <!-- <script type="text/javascript" src="cordova.js"></script> -->
-</body>
+<script type="text/javascript" src="./dev/vendor.js"></script><script type="text/javascript" src="./dev/app.js"></script></body>
 
 </html>
